--- a/iosStudy/Base.lproj/Main.storyboard
+++ b/iosStudy/Base.lproj/Main.storyboard
@@ -15,27 +15,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="My Pics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rfj-Mg-YZY">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Pics" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rfj-Mg-YZY">
                                 <rect key="frame" x="139" y="99" width="109" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_6282" translatesAutoresizingMaskIntoConstraints="NO" id="MXi-Av-IAi">
-                                <rect key="frame" x="27" y="200" width="320" height="320"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMinY="YES" flexibleMaxY="YES"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="IMG_6282" translatesAutoresizingMaskIntoConstraints="NO" id="MXi-Av-IAi">
+                                <rect key="frame" x="28" y="200" width="320" height="320"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="320" id="5fV-5v-x1u"/>
+                                    <constraint firstAttribute="width" constant="320" id="uPv-Ch-fsb"/>
+                                </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="₩10000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMn-4V-3Vi">
-                                <rect key="frame" x="130" y="570" width="116" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1d-U4-4cE">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R1d-U4-4cE">
                                 <rect key="frame" x="153" y="627" width="68" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="refresh">
                                     <color key="titleColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -44,8 +38,25 @@
                                     <action selector="BtnHello:" destination="BYZ-38-t0r" eventType="touchUpInside" id="mTb-zh-WE9"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="₩10000" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NMn-4V-3Vi">
+                                <rect key="frame" x="129.66666666666666" y="583" width="116" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Rfj-Mg-YZY" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="55" id="4hV-oz-qx0"/>
+                            <constraint firstItem="Rfj-Mg-YZY" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="139" id="AWb-nx-FVA"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Rfj-Mg-YZY" secondAttribute="trailing" constant="127" id="C1g-W5-k2c"/>
+                            <constraint firstItem="MXi-Av-IAi" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="156" id="e6u-P6-phv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="R1d-U4-4cE" secondAttribute="bottom" constant="115" id="fyj-Wu-jbP"/>
+                            <constraint firstItem="NMn-4V-3Vi" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="h97-Fl-Gbs"/>
+                            <constraint firstItem="MXi-Av-IAi" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ivC-cE-r7c"/>
+                            <constraint firstItem="R1d-U4-4cE" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yy6-De-gdx"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="NMn-4V-3Vi" secondAttribute="bottom" constant="159" id="zag-2k-HRo"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
